Fix the login alignment
login does not overlap search

--- a/styles/style.css
+++ b/styles/style.css
@@ -221,6 +221,9 @@ text-align:center;
 #searchButton{
   float:right;
 }
+.rightNerd{
+  margin-right:27.33!important;
+}
 .topnav a:hover {
   color:#8f8e8e;
   transition: 0.15s ease-in-out;
